--- a/aiwrite/templates/aiwrite/index.html
+++ b/aiwrite/templates/aiwrite/index.html
@@ -8,6 +8,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{% static 'css/main.css' %}">
+		<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
 	</head>
 	<body>
 
