--- a/aiwrite/templates/aiwrite/subscription.html
+++ b/aiwrite/templates/aiwrite/subscription.html
@@ -5,6 +5,10 @@
 <head>
 	<title>Chatnget</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -64,6 +68,7 @@
 
 
 
+	  
 
 
 
