--- a/aiwrite/templates/aiwrite/textimg.html
+++ b/aiwrite/templates/aiwrite/textimg.html
@@ -11,6 +11,8 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+
 
 
 	<title>Peanut</title>
@@ -75,12 +77,33 @@
 		<nav>
 			
 			
-			<li>
-				<a href="/signout" class="logout">
-					<i class='bx bxs-log-out-circle' ></i>
-					<span class="text">Logout</span>
-				</a>
-			</li>
+			
+			<i class='bx bx-menu' ></i>
+			<a href="#" class="nav-link">Categories</a>
+			
+
+			<input type="checkbox" id="switch-mode" hidden>
+			<label for="switch-mode" class="switch-mode"></label>
+			
+			
+			
+			
+			
+			<ul>
+				<li> 
+					<a href="#">
+						{% if user.is_authenticated %}
+		
+						<i class='bx bxs-dashboard' ></i>
+						<span class="text">Welcome, {{ username }} &hearts;</span>
+						{% endif %}
+					</a>
+				</li> 
+
+				
+
+			</ul> 
+
 			
 		</nav>
 		<!-- NAVBAR -->
@@ -141,7 +164,72 @@
 		</main>
 		<!-- MAIN -->
 	</section>
-	<!-- CONTENT -->
+	<!-- Javascript -->
+
+
+	<script>
+
+		const allSideMenu = document.querySelectorAll('#sidebar .side-menu.top li a');
+
+		allSideMenu.forEach(item=> {
+			const li = item.parentElement;
+
+			item.addEventListener('click', function () {
+				allSideMenu.forEach(i=> {
+					i.parentElement.classList.remove('active');
+				})
+				li.classList.add('active');
+			})
+		});
+
+
+
+	// TOGGLE SIDEBAR
+	const menuBar = document.querySelector('#content nav .bx.bx-menu');
+	const sidebar = document.getElementById('sidebar');
+
+	menuBar.addEventListener('click', function () {
+		sidebar.classList.toggle('hide');
+	})
+
+
+
+
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		const switchMode = document.getElementById('switch-mode');
+
+		switchMode.addEventListener('change', function () {
+			if(this.checked) {
+				document.body.classList.add('dark');
+			} else {
+				document.body.classList.remove('dark');
+			}
+		})
+
+	 </script>
+
 	
 
 	<script src="{% static 'js/script.js' %}"></script>
