--- a/static/css/main.css
+++ b/static/css/main.css
@@ -880,6 +880,8 @@ body {
 #content nav .bx.bx-menu {
 	cursor: pointer;
 	color: var(--dark);
+	margin-right: auto;
+	
 }
 #content nav .nav-link {
 	font-size: 16px;
