--- a/aiwrite/templates/aiwrite/dashboard.html
+++ b/aiwrite/templates/aiwrite/dashboard.html
@@ -11,11 +11,14 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
 
-	<title>Peanut</title>
+
+
+	<title>ChatNGet</title>
 </head>
-<body>
+	<body>
 
 
 	<!-- SIDEBAR -->
@@ -51,6 +54,8 @@
 					<span class="text">Upgrade plan</span>
 				</a>
 			</li>
+
+
 		</ul>
 		<ul class="side-menu">
 			
@@ -60,6 +65,8 @@
 					<span class="text">Logout</span>
 				</a>
 			</li>
+
+			
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
@@ -70,25 +77,31 @@
 	<section id="content">
 		<!-- NAVBAR -->
 		<nav>
+
+			<i class='bx bx-menu' ></i>
+			<a href="#" class="nav-link">Categories</a>
+			
+
+			<input type="checkbox" id="switch-mode" hidden>
+			<label for="switch-mode" class="switch-mode"></label>
+			
+			
+			
 			
 			
 			<ul>
 				<li> 
 					<a href="#">
 						{% if user.is_authenticated %}
+
+						<i class='bx bxs-user-circle' ></i>
 		
-						<i class='bx bxs-dashboard' ></i>
 						<span class="text">Welcome, {{ username }} &hearts;</span>
 						{% endif %}
 					</a>
 				</li> 
 
-				<li> 
-					<a href="/signout" class="logout">
-						<i class='bx bxs-log-out-circle' ></i>
-						<span class="text">Logout</span>
-					</a>
-				</li>
+				
 
 			</ul> 
 
@@ -156,6 +169,9 @@
 					</span>
 				</li>
 
+
+				
+
 			</ul>
 
 			<br>
@@ -170,8 +186,73 @@
 		<!-- MAIN -->
 	</section>
 	<!-- CONTENT -->
+
+	<script>
+
+		const allSideMenu = document.querySelectorAll('#sidebar .side-menu.top li a');
+
+		allSideMenu.forEach(item=> {
+			const li = item.parentElement;
+
+			item.addEventListener('click', function () {
+				allSideMenu.forEach(i=> {
+					i.parentElement.classList.remove('active');
+				})
+				li.classList.add('active');
+			})
+		});
+
+
+
+	// TOGGLE SIDEBAR
+	const menuBar = document.querySelector('#content nav .bx.bx-menu');
+	const sidebar = document.getElementById('sidebar');
+
+	menuBar.addEventListener('click', function () {
+		sidebar.classList.toggle('hide');
+	})
+
+
+
+
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		const switchMode = document.getElementById('switch-mode');
+
+		switchMode.addEventListener('change', function () {
+			if(this.checked) {
+				document.body.classList.add('dark');
+			} else {
+				document.body.classList.remove('dark');
+			}
+		})
+
+	 </script>
+
+
+
 	
 
-	<script src="{% static 'js/script.js' %}"></script>
-</body>
+	</body>
 </html>
