--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -80,3 +80,47 @@
     }
 }
   
+
+
+
+.subscription-container {
+
+  display: grid;
+  padding: 0px;
+
+}
+
+.subscription-box {
+  padding: 15px;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 18px;
+}
+
+p {
+  font-size: 14px;
+}
+
+.features li {
+  font-size: 12px;
+}
+
+.subscribe-button {
+  padding: 6px 12px;
+  font-size: 14px;
+}
+
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 500px; */
+  background-color: #f9f9f9;
+  padding: 50px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
