--- a/aiwrite/templates/aiwrite/dashboard.html
+++ b/aiwrite/templates/aiwrite/dashboard.html
@@ -137,6 +137,8 @@
 				
 				<li>
 					<i class='bx bxs-group' ></i>
+					<a href="chatbot/">
+
 					<span class="text">
 						<h3>ChatNGet</h3>
 						<p> Your ultimate chatting destination where conversations never end. <p>
@@ -156,6 +158,8 @@
 			<ul class="box-info">
 				<li>
 					<i class='bx bx-images' ></i>
+					<a href="imgtotxt/">
+
 					<span class="text">
 						<h3>Text to image</h3>
 						<p> Transform your words into stunning visuals with just one click! <p>
