--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -47,7 +47,7 @@
       }
       
       .section-heading {
-        font-size: 35px;
+        font-size: 30px;
         font-weight: bold;
         margin-bottom: 20px;
         text-transform: uppercase;
@@ -56,7 +56,7 @@
       }
       
       .section-paragraph {
-        font-size: 28px;
+        font-size: 25px;
         margin-bottom: 20px;
         line-height: 1.5;
       }
@@ -73,7 +73,7 @@
     }
 
     .image {
-        max-width: 100%;
+        max-width: 70%;
         height: auto;
         border-radius: 50%;
         text-align: center;
@@ -100,7 +100,7 @@ h2 {
 }
 
 p {
-  font-size: 14px;
+  font-size: 24px;
 }
 
 .features li {
@@ -114,11 +114,11 @@ p {
 
 
 
-form {
+#chat-form{
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* width: 500px; */
+
   background-color: #f9f9f9;
   padding: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
